# name-a-toon

./: Cargo.toml  pyproject.toml  readme.md
src/name_a_toon/: __init__.py  gen.py  regex.py
tests/: nametest.py
