[package]
name = "rustyname"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustyname"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module"]

[package.metadata.maturin]
name = "name_a_toon.rustyname"